--- a/index.html
+++ b/index.html
@@ -138,6 +138,60 @@
               <div class="team-text">
                 <h3 class="team-name section-heading">Mark Guerrero</h3>
                 <p class="team-description description">Product Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Instagram"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://x.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Twitter"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Facebook"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Linkedin"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -151,6 +205,60 @@
               <div class="team-text">
                 <h3 class="team-name section-heading">Tom Ford</h3>
                 <p class="team-description description">Frontend Developer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Instagram"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://x.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Twitter"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Facebook"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Linkedin"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -164,6 +272,60 @@
               <div class="team-text">
                 <h3 class="team-name section-heading">Camila Garcia</h3>
                 <p class="team-description description">Marketing</p>
+                <ul class="team-social-list">
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Instagram"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://x.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Twitter"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Facebook"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Linkedin"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -177,6 +339,60 @@
               <div class="team-text">
                 <h3 class="team-name section-heading">Daniel Wilson</h3>
                 <p class="team-description description">UI Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Instagram"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://x.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Twitter"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Facebook"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icon">
+                    <a
+                      class="team-social-link"
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Link Linkedin"
+                    >
+                      <svg class="team-social-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -189,60 +405,95 @@
           <h2 class="portfolio-title section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                width="360"
-                height="300"
-                alt="Banking App preview"
-              />
+              <div class="overlay-wrap">
+                <img
+                  src="./images/banking-app.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App preview"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-name section-heading">Banking App</h3>
                 <p class="portfolio-description description">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment preview"
-              />
+              <div class="overlay-wrap">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment preview"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-name section-heading">Cashless Payment</h3>
                 <p class="portfolio-description description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation-app.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App preview"
-              />
+              <div class="overlay-wrap">
+                <img
+                  src="./images/meditation-app.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App preview"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-name section-heading">Meditation App</h3>
                 <p class="portfolio-description description">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi-service.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service preview"
-              />
+              <div class="overlay-wrap">
+                <img
+                  src="./images/taxi-service.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service preview"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-name section-heading">Taxi Service</h3>
                 <p class="portfolio-description description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations preview"
-              />
+              <div class="overlay-wrap">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations preview"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-name section-heading">
                   Screen Illustrations
@@ -251,12 +502,19 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/online-courses.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses preview"
-              />
+              <div class="overlay-wrap">
+                <img
+                  src="./images/online-courses.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses preview"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-name section-heading">Online Courses</h3>
                 <p class="portfolio-description description">Marketing</p>
@@ -270,13 +528,72 @@
     <!-- #region Footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <p class="footer-text description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-text">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <p class="footer-text description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-icon">
+              <a
+                class="footer-social-link"
+                href="https://instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link Instagram"
+              >
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-icon">
+              <a
+                class="footer-social-link"
+                href="https://x.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link Twitter"
+              >
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-icon">
+              <a
+                class="footer-social-link"
+                href="https://facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link Facebook"
+              >
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-icon">
+              <a
+                class="footer-social-link"
+                href="https://linkedin.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Link Linkedin"
+              >
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- #endregion /Footer -->
